[tool.poetry]
name = "todomvc-tests"
version = "0.1.0"
description = ""
authors = ["Dmytro Dolya <63144774+DmytroDolya1986@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selene = {version = "^1.0.2", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
